# qute

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  build_docs.py  build_docs.sh  environment.yml  pyproject.toml  pyproject.toml.uv  setup.py
config_samples/: classification_project.ini_sample  regression_project.ini_sample  self_supervised_classification_project.ini_sample
doc/qute/: index.html
doc/qute/campaigns/: index.html
doc/qute/data/: dataloaders.html  datasets.html  demos.html  index.html  io.html  utils.html
doc/qute/device/: index.html
doc/qute/examples/: cell_segmentation_demo_unet.html  index.html
doc/qute/losses/: index.html
doc/qute/models/: index.html  unet.html
doc/qute/postprocess/: index.html
doc/qute/preprocess/: index.html
doc/qute/transforms/: index.html  transforms.html
doc/qute/transforms/util/: index.html
docs/: conf.py  index.rst  qute.campaigns.rst  qute.config.rst  qute.data.dataloaders.rst  qute.data.demos.rst  qute.data.io.rst  qute.data.rst  qute.data.utils.rst  qute.device.rst  qute.director.rst  qute.hash.rst  qute.losses.rst  qute.metrics.rst  qute.mode.rst  qute.models.attention_unet.rst  qute.models.rst  qute.models.swinunetr.rst  qute.models.unet.rst  qute.postprocess.rst  qute.preprocess.rst  qute.project.rst  qute.random.rst  qute.rst  qute.tools.rst  qute.transforms.debug.rst  qute.transforms.geom.rst  qute.transforms.io.rst  qute.transforms.norm.rst  qute.transforms.objects.rst  qute.transforms.rst  qute.transforms.util.rst  requirements.txt  usage.rst
examples/: __init__.py  cell_restoration_demo_unet.py  cell_restoration_demo_unet_config.ini  cell_segmentation_demo_attentionunet.py  cell_segmentation_demo_learning_rate_unet.py  cell_segmentation_demo_pre_process.py  cell_segmentation_demo_swinunet_hyperparameters.py  cell_segmentation_demo_swinunet_hyperparameters_config.ini  cell_segmentation_demo_unet.py  cell_segmentation_demo_unet_3d.py  cell_segmentation_demo_unet_3d_config.ini  cell_segmentation_demo_unet_config.ini  cell_segmentation_demo_unet_config_hyperparameters.ini  cell_segmentation_demo_unet_ensemble.py  cell_segmentation_demo_unet_hyperparameters.py  cell_segmentation_demo_unet_hyperparameters_config.ini  cell_segmentation_demo_unet_idt.py  cell_segmentation_demo_unet_idt_3d.py  cell_segmentation_demo_unet_self_supervised.py  cell_segmentation_hp_optim_demo_unet.py  cell_self_supervised_segmentation_demo.py  cell_self_supervised_segmentation_demo_config.ini  cell_self_supervised_segmentation_refine_demo.py  cell_self_supervised_segmentation_refine_demo_config.ini  ensemble_cell_segmentation_demo_unet.py  ensemble_cell_segmentation_demo_unet_config.ini
examples_new/: cell_restoration_demo_unet_config.ini  cell_segmentation_demo_unet.py  cell_segmentation_demo_unet_config.ini
examples_old/: __init__.py  cell_segmentation_demo_unet_idt.py
qute/: __init__.py  main.py
qute/callbacks/: __init__.py  _unfreeze.py
qute/campaigns/: __init__.py  _campaigns.py
qute/cli/: __init__.py  _app.py  _cli_config.py  _cli_experiment.py  _cli_run.py
qute/config/: __init__.py  _config.py
qute/data/: __init__.py  dataloaders.py  datasets.py  demos.py  inference.py  io.py  utils.py
qute/device/: __init__.py  _device.py
qute/director/: __init__.py  _director.py
qute/examples/: __init__.py  cell_segmentation_demo_attentionunet.py  cell_segmentation_demo_unet.py  cell_segmentation_hp_optim_demo_unet.py
qute/hash/: __init__.py  _hash.py
qute/losses/: __init__.py  _losses.py
qute/metrics/: __init__.py  _metrics.py
qute/mode/: __init__.py  _mode.py
qute/models/: __init__.py  attention_unet.py  base_model.py  dynunet.py  efficient_net.py  factory.py  swinunetr.py  unet.py
qute/postprocess/: __init__.py  _postprocess.py
qute/preprocess/: __init__.py  _preprocess.py  preprocess.py
qute/project/: __init__.py  _project.py
qute/random/: __init__.py  _random.py  _seed.py
qute/tools/: __init__.py  _tools.py
qute/transforms/: __init__.py  _campaign.py  _transforms.py  transforms.py
qute/transforms/debug/: __init__.py  _debug.py
qute/transforms/geom/: __init__.py  _geom.py
qute/transforms/io/: __init__.py  _io.py
qute/transforms/norm/: __init__.py  _norm.py
qute/transforms/objects/: __init__.py  _objects.py
qute/transforms/util/: __init__.py  _util.py
tests/: __init__.py  test_cli.py  test_config.py  test_dataloaders.py  test_flows.py  test_losses_and_metrics.py  test_tools.py  test_transforms.py
tests/data/: .gitignore
