[tool.poetry]
name = "qute"
version = "0.4.0"
description = "Deep learning workflow manager."
authors = ["Aaron Ponti <aaron.ponti@bsse.ethz.ch>"]
license = "Apache-2.0"
readme = "README.md"
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Education",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true
known_third_party = ["imio", "monai", "natsort", "nd2reader", "numpy", "pytest", "pytorch_lightning", "ray", "requests", "scipy", "skimage", "sklearn", "tifffile", "torch", "torchmetrics", "tqdm", "typer", "typing_extensions", "userpaths"]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
numpy = "^1.26.0"
tifffile = "^2024.7.2"
natsort = "^8.4.0"
pytorch-lightning = "^2.4.0"
tensorboard = ">=2.11.2"
scikit-image = ">=0.19.3"
ray = {extras = ["tune"], version = "^2.3.1"}
protobuf = "3.20.3"             # Required for ray[tune] 2.3.1
userpaths = ">=0.1.3"
nnunetv2 = ">=2.2.1"
hiddenlayer = {git = "https://github.com/FabianIsensee/hiddenlayer.git"}
imio = ">=0.3.0"
nd2reader = "^3.3.0"
scipy = "^1.14.0"
typing-extensions = "^4.12.2"
monai = "^1.4.0"
typer = "^0.13.0"
torch = "2.4.1"
torchvision = "0.19.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
torch-tb-profiler = "^0.4.3"
types-pyyaml = "^6.0.12.20240311"
types-requests = "^2.32.0.20240622"
pre-commit = "^3.7.1"
pdoc3 = "^0.11.1"

[tool.poetry.scripts]
qute = "qute.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
