[project]
authors = [
    {name = "Aaron Ponti", email = "aaron.ponti@bsse.ethz.ch"},
]
license = {text = "Apache-2.0"}
requires-python = "<=3.13,>=3.11"
name = "qute"
version = "0.5.0"
description = "Deep learning workflow manager."
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Education",
]
dependencies = [
    "numpy<2.0.0,>=1.26.0",
    "tifffile<2025.0.0,>=2024.7.2",
    "natsort<9.0.0,>=8.4.0",
    "pytorch-lightning>=2.4.0,<3.0.0",
    "tensorboard>=2.11.2",
    "scikit-image>=0.19.3",
    "userpaths>=0.1.3",
    "nnunetv2>=2.2.1",
    "hiddenlayer @ git+https://github.com/FabianIsensee/hiddenlayer.git",
    "imio>=0.3.0",
    "nd2reader>=3.3.1",
    "scipy<2.0.0,>=1.14.0",
    "typing-extensions<5.0.0,>=4.12.2",
    "monai>=1.4.0,<2.0.0",
    "typer<1.0.0,>=0.13.0",
    "ruff>=0.8.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "hyperopt>=0.2.7",
    "protobuf>=3.20.3",
    "ray[default,tune]>=2.44.1",
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.0.0",
    "torch-tb-profiler<1.0.0,>=0.4.3",
    "types-pyyaml<7.0.0.0,>=6.0.12.20240311",
    "types-requests<3.0.0.0,>=2.32.0.20240622",
    "pre-commit<4.0.0,>=3.7.1",
    "pdoc3<1.0.0,>=0.11.1",
]

[project.scripts]
qute = "qute.main:app"

#[tool-uv]
#default-groups = []

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true
known_third_party = ["imio", "matplotlib", "monai", "natsort", "nd2reader", "numpy", "pytest", "pytorch_lightning", "ray", "requests", "scipy", "skimage", "sklearn", "tifffile", "torch", "torchmetrics", "tqdm", "typer", "typing_extensions", "userpaths"]
